# logchain

./: .gitignore  Cargo.toml  README.md
demo/: generate_log.py  tamper_demo.ps1
src/: hasher.rs  journal.rs  lib.rs  main.rs  merkle.rs  report.rs  verify.rs
tests/: integration.rs
