[package]
name = "logchain"
version = "0.1.0"
edition = "2024"
description = "Secure Log Aggregator with Merkle Integrity — tamper-evident audit trails via SHA-256 Merkle trees"

[lib]
name = "logchain"
path = "src/lib.rs"

[[bin]]
name = "logchain"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
